[calibration] Add an argument in demo.launch for calibration
  - This argument mainly removes the handles and avoid building a complete
    constraint graph.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,6 +78,7 @@ INSTALL(FILES
 INSTALL(FILES
   supervisor.py
   demo.yaml
+  demo-calibration.yaml
   DESTINATION
   ${CATKIN_PACKAGE_SHARE_DESTINATION}/franka/manipulation
   )
