[calibration] Save new parameters after calibration.

--- a/config/calibrated-params.yaml
+++ b/config/calibrated-params.yaml
@@ -1,8 +1,8 @@
-# Pose of ref_camera_link in hand
+\# Pose of ref_camera_link in hand
 camera:
-  x: 0.03187513
-  y: 0.00119426
-  z: 0.04185629
-  roll: -0.13978963
-  pitch: -1.47630497
-  yaw: -3.05136479
+  x: 0.03066786656311201
+  y: 0.0002916853387606305
+  z: 0.06111340486830215
+  roll: -0.2269061345920429
+  pitch: -1.478234884273772
+  yaw: -2.9525675984049986
